# 3detr

./: .gitignore  config.py  criterion.py  engine.py  main.py  pyproject.toml
datasets/: __init__.py  cbct_tooth_instance.py  scan_tooth.py  tooth.py
models/: model_3detr.py
scannet/: batch_load_scannet_data.py  load_scannet_data.py
scripts/: cbct_tooth_instance_train.sh  scannet_quick.sh  scannet_test.sh  tooth_test.sh  tooth_train.sh
utils/: __init__.py  eval_det.py  pc_util.py
